@@ -2151,6 +2151,8 @@ EXTRA_DIST = \
   poke.pkl/typeof-20.pk \
   poke.pkl/typeof-21.pk \
   poke.pkl/typeof-22.pk \
+  poke.pkl/typeof-23.pk \
+  poke.pkl/typeof-24.pk \
   poke.pkl/typeof-array-1.pk \
   poke.pkl/typeof-array-2.pk \
   poke.pkl/typeof-int-1.pk \
